--- a/dot_p10k.zsh.tmpl
+++ b/dot_p10k.zsh.tmpl
@@ -104,6 +104,7 @@
     timewarrior             # timewarrior tracking status (https://timewarrior.net/)
     taskwarrior             # taskwarrior task count (https://taskwarrior.org/)
     # cpu_arch              # CPU architecture
+    {{ default "" (index . "p10k_prompt_top") }}
     time                    # current time
     # =========================[ Line #2 ]=========================
     newline                 # \n
@@ -113,6 +114,7 @@
     # battery               # internal battery
     # wifi                  # wifi speed
     # example               # example user-defined segment (see prompt_example function below)
+    {{ default "" (index . "p10k_prompt_bottom") }}
   )
 
   # Defines character set used by powerlevel10k. It's best to let `p10k configure` set it for you.
@@ -1638,6 +1640,14 @@
   # Type `p10k help segment` for documentation and a more sophisticated example.
   function prompt_example() {
     p10k segment -f 2 -i '⭐' -t 'hello, %n'
+  }
+
+  function prompt_target() {
+    p10k segment -f blue -t " $username@${target%.$domain}" -c "$username$target"
+  }
+
+  function prompt_krb5ccname() {
+    p10k segment -f yellow -t " ${${KRB5CCNAME%.ccache}%%@*}" -c "$KRB5CCNAME"
   }
 
   # User-defined prompt segments may optionally provide an instant_prompt_* function. Its job
