Fix python plugin name

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -78,7 +78,7 @@ ZSH_TMUX_AUTOSTART=false
 # Custom plugins may be added to $ZSH_CUSTOM/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git tmux fzf zsh-autosuggestions zsh-syntax-highlighting chezmoi dirhistory python3 {{ .zsh_plugins }})
+plugins=(git tmux fzf zsh-autosuggestions zsh-syntax-highlighting chezmoi dirhistory python {{ .zsh_plugins }})
 
 source $ZSH/oh-my-zsh.sh
 
