--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -111,3 +111,16 @@ export EDITOR='vim'
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+
+slugify () {
+  setopt local_options extended_glob
+  local s="$*"
+  # Convert to lowercase
+  s="${s:l}"
+  # Replace non-alphanumeric characters with a single hyphen
+  s="${s//[^[:alnum:]]##/-}"
+  # Remove leading/trailing hyphens
+  s="${s#-}"
+  s="${s%-}"
+  echo "$s"
+}
