Make tmux plugin optional

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,5 @@
 {{- $remote := false -}}
-{{- $zsh_plugins := "" -}}
+{{- $zsh_plugins := "tmux" -}}
 {{- $p10k_prompt_top := "" -}}
 {{- $p10k_prompt_bottom := "" -}}
 
