Add editor option

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -13,6 +13,7 @@
 {{- end -}}
 
 [data]
+editor = "vim"
 zsh_plugins = {{ $zsh_plugins | quote }}
 p10k_prompt_top = {{ $p10k_prompt_top | quote }}
 p10k_prompt_bottom = {{ $p10k_prompt_bottom | quote }}
