--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -95,7 +95,7 @@ source $ZSH/oh-my-zsh.sh
 # else
 #   export EDITOR='mvim'
 # fi
-export EDITOR='vim'
+export EDITOR='{{ .editor }}'
 
 # Compilation flags
 # export ARCHFLAGS="-arch x86_64"
